fixes #4006: Bring back the "edit tags" button to the sidebar fixes #4011: Comment input field under posts is too big, goes slightly beyond view boundaries fixes #4010: Incorrect dynamic tag counts

--- a/app/javascript/src/styles/specific/posts.scss
+++ b/app/javascript/src/styles/specific/posts.scss
@@ -343,8 +343,11 @@ div#c-posts {
     }
 
     textarea {
-      width: 100%;
       margin-bottom: 0.25em;
+    }
+
+    #edit textarea {
+      width: 100%;
     }
 
     #favlist {
